--- a/figures/src/mkplot_preamble.tex
+++ b/figures/src/mkplot_preamble.tex
@@ -2,6 +2,7 @@
 \usepackage{CrimsonPro}
 \usepackage{isomath,amsmath,amssymb,braket,slashed,mathrsfs,bm}
 \renewcommand{\vec}[1]{\bm{#1}}
+\renewcommand{\v}[1]{\vec{#1}}
 \DeclareMathOperator{\sw}{s}
 \DeclareMathOperator{\cw}{c}
 \DeclareMathOperator{\ew}{e}
