--- a/fields.tex
+++ b/fields.tex
@@ -151,7 +151,7 @@ and~(#2#1#3)}
 \newcommand{\sumn}[1]{\sum_{#1=0}^{+\infty}}
 \newcommand{\sumnp}[1]{\sum_{#1=1}^{+\infty}}
 \newcommand{\sumz}[1]{\sum_{#1=-\infty}^{+\infty}}
-\renewcommand{\vec}[1]{\bm{#1}}
+\newcommand{\vecb}[1]{\bm{#1}}
 \let\Re\relax
 \DeclareMathOperator{\Re}{Re}
 \let\Im\relax
@@ -166,7 +166,7 @@ and~(#2#1#3)}
 % Brian's macros and patches
 \newcommand{\mnote}[1]{}    
 \input{VTAmacros.tex}
-\renewcommand{\v}[1]{\vec{#1}}
+\renewcommand{\v}[1]{\vecb{#1}}
 \newcommand{\thickR}{\mathbb{R}}
 \renewcommand{\e}[1]{\v{e}_{#1}}
 \renewcommand{\ed}[1]{\v{e}_{#1}}	
