Added second chapter

--- a/fields.tex
+++ b/fields.tex
@@ -222,9 +222,8 @@ and~(#2#1#3)}
   \url{https://github.com/aportelli/lecture-fields}.
 
   \subsection*{Acknowledgements}
-  AP would like to warmly thanks the students of the Introductory Fields and Waves course
-  at the University of Edinburgh for their interest and patience, as well as the
-  significant feedback on these notes.
+  AP would like to warmly thank Brian Pendleton for their work on previous iterations of
+  this course, these notes are largely adapted from material they produced.
 
   \subsection*{Contact}
   Office 4404, James Clerk Maxwell Building,\\ Peter Guthrie Tait Road,\\ Edinburgh EH9
@@ -254,30 +253,13 @@ and~(#2#1#3)}
 % \vfill\pagebreak
 % \input{exercises/wave-eq}
 % \shipoutAnswer
-% \chapter{Elementary waves}
-% \label{chap:elementary-waves}
-% \input{chapters/elementary-waves}
-% \vfill\pagebreak
-% \input{exercises/elementary-waves}
-% \shipoutAnswer
-% \chapter{Fourier series}
-% \label{chap:series}
-% \input{chapters/series}
-% \vfill\pagebreak
-% \input{exercises/series}
-% \shipoutAnswer
-% \vfill\pagebreak
-% \input{problems/gibbs}
-% \shipoutAnswer
-% \chapter{Fourier transform}
-% \label{chap:transform}
-% \input{chapters/transform}
-% \vfill\pagebreak
-% \input{exercises/transform}
-% \shipoutAnswer
-% \chapter{Differential equations}
-% \input{chapters/diff-eq}
-% \vfill\pagebreak
-% \input{exercises/diff-eq}
-% \shipoutAnswer
+\chapter{Differential operations on fields}
+\label{chap:diff}
+\input{chapters/diff}
+\chapter{Field integration}
+\label{chap:integration}
+\input{chapters/integration}
+\chapter{Calculus in curvilinear coordinates}
+\label{chap:curvilinear}
+\input{chapters/curvilinear}
 \end{document}
