--- a/fields.tex
+++ b/fields.tex
@@ -167,6 +167,7 @@ and~(#2#1#3)}
 \newcommand{\mnote}[1]{}    
 \input{VTAmacros.tex}
 \renewcommand{\v}[1]{\vecb{#1}}
+\renewcommand{\ul}[1]{\v{#1}}
 \newcommand{\thickR}{\mathbb{R}}
 \renewcommand{\e}[1]{\v{e}_{#1}}
 \renewcommand{\ed}[1]{\v{e}_{#1}}	
@@ -175,6 +176,7 @@ and~(#2#1#3)}
 \newcommand{\sumk}{\sum_{k}}
 \newcommand{\suml}{\sum_{l}}
 \newcommand{\sums}{\sum_{s}}
+\newcommand{\dd}{\mbox{d}}
 
 % Title
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
