--- a/VTAmacros.tex
+++ b/VTAmacros.tex
@@ -168,7 +168,7 @@
 \newcommand{\vpr}[2]{\v{{#1}}\!\times\!\v{{#2}}}%	VECTOR PRODUCT
 \newcommand{\bvpr}[2]{\bv{{#1}}\!\times\!\bv{{#2}}}%	Bold VECTOR PRODUCT
 \newcommand{\spr}[2]{\v{{#1}}\!\cdot\!\v{{#2}}}	%	SCALAR PRODUCT
-\newcommand{\stpr}[3]{(\v{{#1}} \, ,\; \v{{#2}}\, ,\; \v{{#3}})}	%SCALAR TRIPLE PRODUCT
+\newcommand{\stpr}[3]{[\v{{#1}},\v{{#2}},\v{{#3}}]}	%SCALAR TRIPLE PRODUCT
 \newcommand{\bspr}[2]{\bv{{#1}}\!\cdot\!\bv{{#2}}} %	Bold SCALAR PRODUCT
 
 \newcommand{\equals}{\;=\;}
