--- a/figures/src/mkplot_preamble.tex
+++ b/figures/src/mkplot_preamble.tex
@@ -3,6 +3,7 @@
 \usepackage{isomath,amsmath,amssymb,braket,slashed,mathrsfs,bm}
 \renewcommand{\vec}[1]{\bm{#1}}
 \renewcommand{\v}[1]{\vec{#1}}
+\newcommand{\diff}{\mathrm{d}}
 \DeclareMathOperator{\sw}{s}
 \DeclareMathOperator{\cw}{c}
 \DeclareMathOperator{\ew}{e}
