--- a/fields.tex
+++ b/fields.tex
@@ -177,6 +177,7 @@ and~(#2#1#3)}
 \newcommand{\suml}{\sum_{l}}
 \newcommand{\sums}{\sum_{s}}
 \newcommand{\dd}{\mbox{d}}
+\renewcommand{\lap}{\grad^2}
 
 % Title
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
