--- a/fields.tex
+++ b/fields.tex
@@ -176,7 +176,7 @@ and~(#2#1#3)}
 \newcommand{\sumk}{\sum_{k}}
 \newcommand{\suml}{\sum_{l}}
 \newcommand{\sums}{\sum_{s}}
-\newcommand{\dd}{\mbox{d}}
+\newcommand{\dd}{\diff}
 \renewcommand{\lap}{\grad^2}
 
 % Title
