--- a/fields.tex
+++ b/fields.tex
@@ -253,9 +253,9 @@ and~(#2#1#3)}
 \chapter{Vector spaces}
 \label{chap:vec-spaces}
 \input{chapters/vec-spaces}
-% \vfill\pagebreak
-% \input{exercises/wave-eq}
-% \shipoutAnswer
+\vfill\pagebreak
+\input{exercises/vec-spaces}
+\shipoutAnswer
 \chapter{Differential operations on fields}
 \label{chap:diff}
 \input{chapters/diff}
