--- a/fields.tex
+++ b/fields.tex
@@ -238,6 +238,7 @@ and~(#2#1#3)}
   Git revision: \gitDescribe\vspace*{0.2cm}\\
   \begin{tabular}{@{} L{0.05\linewidth} L{0.15\linewidth} L{0.6\linewidth} @{}}
     \toprule
+    v0.16.1 & 19/12/2025 & first released version \\
     \bottomrule
   \end{tabular}
 }
@@ -259,10 +260,10 @@ and~(#2#1#3)}
 \chapter{Differential operations on fields}
 \label{chap:diff}
 \input{chapters/diff}
-\chapter{Field integration}
-\label{chap:integration}
-\input{chapters/integration}
-\chapter{Calculus in curvilinear coordinates}
-\label{chap:curvilinear}
-\input{chapters/curvilinear}
+% \chapter{Field integration}
+% \label{chap:integration}
+% \input{chapters/integration}
+% \chapter{Calculus in curvilinear coordinates}
+% \label{chap:curvilinear}
+% \input{chapters/curvilinear}
 \end{document}
