--- a/exercises/vec-spaces.tex
+++ b/exercises/vec-spaces.tex
@@ -197,5 +197,94 @@
   \]
   where there is an implicit sum over each pair of dummy indices.
   %---------------------------------------------------------------------------------------
+  \Exercise
+  If a matrix $A$ has components $a_{ij}$ given by
+  \[
+    \ds
+    \left(
+    \begin{array}{rrr}
+        1  & -1 & 0 \\
+        -2 & 3  & 1 \\
+        2  & 0  & 4
+      \end{array}
+    \right)
+  \]
+  show, assuming the summation convention, that
+  \[
+    \begin{array}{ccc}
+      a_{ii} = 8;           & a_{1i} \, a_{i2} =-4; & a_{i2} \, a_{i3} =3;   \\[1ex]
+      a_{1i} \, a_{2i} =-5; & a_{i2}  a_{3i} =-2;   & a_{ij} \, a_{ji} = 30.
+    \end{array}
+  \]
+
+  Write down the components of the matrix given by $a_{ik} \, \delt{kj}$. (Hint: this is
+  easy.)
+  % and does not require any arithmetic)
+
+  \Exercise Assuming the summation convention, evaluate
+  $\eps{ijk}\,\eps{pqk}$, and compare with the value of
+  $(\delt{ip}\,\delt{jq} - \delt{iq}\,\delt{jp})$ in the following cases
+  \Question  $i=1$ ; $j=2$ ; $p=1$ ; $q=2$ ;
+  \Question   $i=1$ ; $j=2$ ; $p=2$ ; $q=1$ ;
+  \Question   $i=1$ ; $j=1$ ; $p$ and $q$ have any values (1, 2 or 3).
+
+  \Exercise Given the identity
+  \[
+    \eps{ijk}\,\eps{pqk}
+    \,=\,
+    \delt{ip}\,\delt{jq} - \delt{iq}\,\delt{jp}\;,
+  \]
+  where the summation convention is implied, show
+  % (by putting $q=j$ and summing $j$ from 1 to 3, {\it etc.\/})
+  that \Question $\eps{ijk}\,\eps{pjk} \,=\, 2\delt{ip}$ ; \Question $\eps{ijk}\,\eps{ijk}
+    \,=\, 6$ ; \Question $\eps{piq}\,\eps{qjr}\,\eps{rkp} \,=\, -\eps{ijk}$ ;
+
+  %\parthh        $\eps{piq}\,\eps{qjr}\,\eps{rks}\,\eps{slp}
+  %\ = \ \delt{ij}\,\delt{kl} + \delt{il}\,\delt{jk}$ .
+
+  \Exercise Using the suffix notation and summation convention, show that
+  \Question  $(\v{a}\times \v{b})\cdot (\v{a}\times \v{b}) \, \, =a^2 b^2-(\v{a}\cdot\v{b})^2$ ;
+  \Question  $(\v{a}\times \v{b})\times (\v{c}\times \v{d}) \,=\, (\v{a},\v{b},\v{d}) \, \v{c}-(\v{a},\v{b},\v{c}) \, \v{d}$ .
+
+  \Exercise Construct the coefficients $\ell_{ij}$ of the transformation
+  matrix $L$, and calculate its determinant for
+  \Question a reflection of basis in the $\eone {-} \etwo$ plane;
+  \Question a rotation of basis about the $\etwo$ axis where a positive
+  rotation is taken to be in right-handed screw direction.
+
+  \Exercise\hfill\\[-3ex]
+  \Question Construct a \emph{right-handed orthonormal} basis in which the first vector
+  $\eone'$ is parallel to $\v{a} = (1,1,1)$, and the second vector $\etwo'$ is
+  parallel to $\v{b} = (1,-1,0)$;
+
+  \Question Construct a \emph{left-handed orthonormal} basis in which the first vector $\eone''$ is parallel
+  to $\v{c} = (4,-3,12)$, and the third vector $\ethree''$ is parallel
+  to $\v{d} = (-3,12,4)$. \{Note that $3^2+4^2+12^2=13^2$.\}
+
+  \Question Calculate the coefficients $\ell_{ij}$ of the transformation matrix
+  from the $\ei'$~basis to the $\ei''$~basis
+  (using $\ell_{ij} = \ei'' \cdot \ej'$).
+  Verify that its determinant is $-1$.
+
+  \Exercise By constructing the relevant transformation matrices, and
+  checking that they satisfy the relation $L L^T=I$, verify that the
+  following triads of vectors form {\it orthonormal} systems, given that
+  the $\ei$~basis is orthonormal.\hfill\\
+  \begin{minipage}[b]{17em}
+    \begin{eqnarray*}
+      \eone'   & = & \sfrac{1}{\sqrt{3}}\left(\eone + \etwo + \ethree\right)\\
+      \etwo'   & = & \sfrac{1}{\sqrt{2}}\left(\eone - \etwo\right)\\
+      \ethree' & = & \sfrac{1}{\sqrt{6}}\left(\eone + \etwo - 2\ethree\right)
+    \end{eqnarray*}
+  \end{minipage}\qquad
+  \begin{minipage}[b]{17em}
+    \begin{eqnarray*}
+      \eone''   & = & \sfrac{1}{5\sqrt{3}}\left(\eone +  7\etwo + 5\ethree\right)\\
+      \etwo''   & = & \sfrac{1}{5\sqrt{2}}\left(7\eone - \etwo\right)\\
+      \ethree'' & = & \sfrac{1}{5\sqrt{6}}\left(\eone + 7\etwo - 10\ethree\right)
+    \end{eqnarray*}
+  \end{minipage}\hfill\\[3ex]
+  Find the transformation matrix $N$ from the $\ei'$~basis to the $\ei''$~basis, where ${\ei'' = n_{ij} \, \ej'}$.
+  Is this transformation proper or improper?
   \vfill
 \end{ExerciseList}
