--- a/exercises/vec-spaces.tex
+++ b/exercises/vec-spaces.tex
@@ -94,7 +94,7 @@
   $\v{x}\cdot\v{a} = b$ is $|b - \v{d}\cdot\v{a}|/a$.
   %---------------------------------------------------------------------------------------
   \Exercise Show that the vectors $\v{A} = (1,2,3)$, $\v{B} = (1,-1,1)$ and
-  $\v{C} = (0,1,1)$ (where the basis is right handed orthonormal)
+  $\v{C} = (0,1,1)$ (where the basis is right-handed orthonormal)
   are linearly independent.
   Express the vector $\v{D} = (2,1,1)$ in the form
   \[
@@ -220,14 +220,14 @@
   Write down the components of the matrix given by $a_{ik} \, \delt{kj}$. (Hint: this is
   easy.)
   % and does not require any arithmetic)
-
+  %---------------------------------------------------------------------------------------
   \Exercise Assuming the summation convention, evaluate
   $\eps{ijk}\,\eps{pqk}$, and compare with the value of
   $(\delt{ip}\,\delt{jq} - \delt{iq}\,\delt{jp})$ in the following cases
   \Question  $i=1$ ; $j=2$ ; $p=1$ ; $q=2$ ;
   \Question   $i=1$ ; $j=2$ ; $p=2$ ; $q=1$ ;
   \Question   $i=1$ ; $j=1$ ; $p$ and $q$ have any values (1, 2 or 3).
-
+  %---------------------------------------------------------------------------------------
   \Exercise Given the identity
   \[
     \eps{ijk}\,\eps{pqk}
@@ -241,17 +241,17 @@
 
   %\parthh        $\eps{piq}\,\eps{qjr}\,\eps{rks}\,\eps{slp}
   %\ = \ \delt{ij}\,\delt{kl} + \delt{il}\,\delt{jk}$ .
-
+  %---------------------------------------------------------------------------------------
   \Exercise Using the suffix notation and summation convention, show that
   \Question  $(\v{a}\times \v{b})\cdot (\v{a}\times \v{b}) \, \, =a^2 b^2-(\v{a}\cdot\v{b})^2$ ;
-  \Question  $(\v{a}\times \v{b})\times (\v{c}\times \v{d}) \,=\, (\v{a},\v{b},\v{d}) \, \v{c}-(\v{a},\v{b},\v{c}) \, \v{d}$ .
-
+  \Question  $(\v{a}\times \v{b})\times (\v{c}\times \v{d}) \,=\, (\v{a},\v{b},\v{d}) \, \v{c}-(\v{a},\v{b},\v{c}) \, \v{d}$.
+  %---------------------------------------------------------------------------------------
   \Exercise Construct the coefficients $\ell_{ij}$ of the transformation
   matrix $L$, and calculate its determinant for
   \Question a reflection of basis in the $\eone {-} \etwo$ plane;
   \Question a rotation of basis about the $\etwo$ axis where a positive
   rotation is taken to be in right-handed screw direction.
-
+  %---------------------------------------------------------------------------------------
   \Exercise\hfill\\[-3ex]
   \Question Construct a \emph{right-handed orthonormal} basis in which the first vector
   $\eone'$ is parallel to $\v{a} = (1,1,1)$, and the second vector $\etwo'$ is
@@ -286,5 +286,86 @@
   \end{minipage}\hfill\\[3ex]
   Find the transformation matrix $N$ from the $\ei'$~basis to the $\ei''$~basis, where ${\ei'' = n_{ij} \, \ej'}$.
   Is this transformation proper or improper?
+  %---------------------------------------------------------------------------------------
+  \Exercise Let $\v{a} = \alpha (\eone +\etwo)$ and $\v{b}=\beta (\etwo-\eone)$
+  and let the basis $\{\ei\!'\}$ be related to the basis $\{\ei\}$ through
+  \begin{eqnarray*}
+    \eone\!'   & = & \sfrac{1}{3}\left(2\eone + \etwo  -2\ethree \right)\\
+    \etwo\!'   & = & \sfrac{1}{3}\left(2\eone - 2\etwo +\ethree\right)\\
+    \ethree\!' & = & \sfrac{1}{3}\left(\eone + 2\etwo + 2\ethree\right)
+  \end{eqnarray*}
+
+  \Question Construct the transformation matrix. \\Is the transformation proper or improper?
+
+  \Question Calculate the transformed components of $\v{a}, \v{b}$.
+
+  \Question Calculate the components of $\v{a} \times \v{b}$: \emph{first} by using the transformed
+  components of $\v{a}, \v{b}$ to calculate the vector product; \emph{secondly} by
+  calculating the components of $\v{a} \times \v{b}$ in the old basis then transforming.
+  Comment on your results.
+  %---------------------------------------------------------------------------------------
+  \Exercise The two sets of basis vectors $\{\ei\}$ and $\{\ei\!'\}$ are
+  both right-handed orthonormal triads such that $\eone\!'$ is in the
+  direction of $(\eone+\ethree)$ and $\etwo\!'$ is in the direction of
+  $(\eone+\etwo-\ethree)$.
+
+  \Question Construct the correctly normalised basis vectors $\eone\!', \, \etwo\!', \, \ethree\!'$.
+
+  \Question Write down the transformation matrix $L$ from the basis $\{\ei\}$ to the basis
+  $\{\ei\!'\}$ and verify that $\det L = +1$.
+
+  \Question Express the two vectors $\v{a}=2\eone+\etwo$ and $\v{b}=\eone-\etwo-\ethree$ in the basis
+  $\{\ei\!'\}$.
+
+  \Question Verify that the scalar product of these two vectors is an invariant of the
+  transformation.
+
+  \Question Verify that the components of the vector product, evaluated in the two bases, are related
+  as follows
+  \[
+    (\v{a}\times\v{b})_{i}'
+    \,=\,
+    (\det L) \,\ell_{ij}\,(\v{a}\times\v{b})_{j}.
+  \]
+
+  %---------------------------------------------------------------------------------------
+  \Exercise By considering two successive rotations through angles $\theta$,
+  $\phi$,  about, for example, the $\etwo$ axis, establish
+  the identities
+  \begin{eqnarray*}
+    \cos(\theta+\phi) = \cos\theta \cos\phi - \sin\theta \sin\phi,\\
+    \sin(\theta+\phi) = \sin\theta\cos\phi +\cos\theta\sin\phi.
+  \end{eqnarray*}
+
+  \Exercise
+  Consider the following rotations and find
+  \Question the transformation matrix for a rotation through angle $\theta$ about the $x$-axis;
+  \Question the transformation matrix for a rotation through angle $\phi$ about the $y$-axis;
+  \Question the combined transformation matrix of first a rotation through angle $\theta$ about the
+  $x$-axis followed by a rotation through angle $\phi$ about the $y$-axis. Verify that its
+  determinant is $+1$.
+  %---------------------------------------------------------------------------------------
+  \Exercise
+  Using the definition of the determinant
+  \[
+    \det A
+    \,=\,
+    \epsilon_{ijk} \, a_{1i} \, a_{2j} \, a_{3k}
+    \,=\,
+    \epsilon_{ijk} \, a_{i1} \, a_{j2} \, a_{k3},
+  \]
+  show that
+  \[
+    \epsilon_{ijk} \det A
+    \,=\,
+    \epsilon_{lmn} \, a_{li} \, a_{mj} \, a_{nk}
+    \,=\,
+    \epsilon_{lmn} \, a_{il} \, a_{jm} \, a_{kn}.
+  \]
+
+  Hence, show, using the definition of the determinant and this latter result, that
+  \[
+    \det{AB} \,=\, \det{A}\,\det{B}.
+  \]
   \vfill
 \end{ExerciseList}
