--- a/fields.tex
+++ b/fields.tex
@@ -260,6 +260,8 @@ and~(#2#1#3)}
 \chapter{Differential operations on fields}
 \label{chap:diff}
 \input{chapters/diff}
+\vfill\pagebreak
+\input{exercises/diff}
 % \chapter{Field integration}
 % \label{chap:integration}
 % \input{chapters/integration}
