--- a/fields.tex
+++ b/fields.tex
@@ -238,7 +238,8 @@ and~(#2#1#3)}
   Git revision: \gitDescribe\vspace*{0.2cm}\\
   \begin{tabular}{@{} L{0.05\linewidth} L{0.15\linewidth} L{0.6\linewidth} @{}}
     \toprule
-    v0.16.1 & 19/12/2025 & first released version \\
+    v0.1 & 19/12/2025 & first released version \\
+    v0.2 & 14/01/2026 & week 1 update          \\
     \bottomrule
   \end{tabular}
 }
