--- a/fields.tex
+++ b/fields.tex
@@ -178,6 +178,13 @@ and~(#2#1#3)}
 \newcommand{\sums}{\sum_{s}}
 \newcommand{\dd}{\diff}
 \renewcommand{\lap}{\grad^2}
+\renewcommand{\intV}{\int_{_{\scriptstyle V}}}
+\renewcommand{\intS}{\int_{_{\scriptstyle S}}}
+\renewcommand{\intC}{\int_{_{\scriptstyle C}}}
+\renewcommand{\ointC}{\oint_{_{\scriptstyle C}}}
+\renewcommand{\ointS}{\oint_{_{\scriptstyle S}}}
+\renewcommand{\dintS}{\int\!\!\int_{_{\scriptstyle S}}}
+\renewcommand{\ointdC}{\oint_{_{\scriptstyle \delta C}}}
 
 % Title
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
