--- a/fields.tex
+++ b/fields.tex
@@ -271,9 +271,9 @@ and~(#2#1#3)}
 \input{chapters/diff}
 \vfill\pagebreak
 \input{exercises/diff}
-% \chapter{Field integration}
-% \label{chap:integration}
-% \input{chapters/integration}
+\chapter{Field integration}
+\label{chap:integration}
+\input{chapters/integration}
 % \chapter{Calculus in curvilinear coordinates}
 % \label{chap:curvilinear}
 % \input{chapters/curvilinear}
