--- a/fields.tex
+++ b/fields.tex
@@ -248,6 +248,7 @@ and~(#2#1#3)}
     v0.1   & 19/12/2025 & first released version                 \\
     v0.2   & 14/01/2026 & week 1 update                          \\
     v0.2.1 & 18/01/2026 & typos corrected in Chapter 1 exercises \\
+    v0.3   & 23/01/2026 & week 2 update, Chapter 3 available     \\
     \bottomrule
   \end{tabular}
 }
