Tutorials 7,8, 9 (partially) done

--- a/fields.tex
+++ b/fields.tex
@@ -272,9 +272,15 @@ and~(#2#1#3)}
 \input{chapters/diff}
 \vfill\pagebreak
 \input{exercises/diff}
+\vfill\pagebreak
+\input{problems/diff}
 \chapter{Field integration}
 \label{chap:integration}
 \input{chapters/integration}
+\vfill\pagebreak
+\input{exercises/integration}
+\vfill\pagebreak
+\input{problems/integration}
 % \chapter{Calculus in curvilinear coordinates}
 % \label{chap:curvilinear}
 % \input{chapters/curvilinear}
