--- a/fields.tex
+++ b/fields.tex
@@ -245,10 +245,11 @@ and~(#2#1#3)}
   Git revision: \gitDescribe\vspace*{0.2cm}\\
   \begin{tabular}{@{} L{0.05\linewidth} L{0.15\linewidth} L{0.6\linewidth} @{}}
     \toprule
-    v0.1   & 19/12/2025 & first released version                 \\
-    v0.2   & 14/01/2026 & week 1 update                          \\
-    v0.2.1 & 18/01/2026 & typos corrected in Chapter 1 exercises \\
-    v0.3   & 23/01/2026 & week 2 update, Chapter 3 available     \\
+    v0.1   & 19/12/2025 & first released version                                        \\
+    v0.2   & 14/01/2026 & week 1 update                                                 \\
+    v0.2.1 & 18/01/2026 & typos corrected in Chapter 1 exercises                        \\
+    v0.3   & 23/01/2026 & week 2 update, Chapter 3 available                            \\
+    v0.4   & 30/01/2026 & week 3 update, Chapter 3 fixes and more exercises \& problems \\
     \bottomrule
   \end{tabular}
 }
