--- a/exercises/integration.tex
+++ b/exercises/integration.tex
@@ -93,7 +93,7 @@
   %---------------------------------------------------------------------------------------
   \Exercise
 
-  If $\v{a} = 2x^{2}y\,\v{e}_x + xz\,\v{e}_y -y^{3}\,\v{e}_z\,$, evaluate explicitly the
+  If $\v{a} = 2x^{2}y\,\v{e}_x + xz\,\v{e}_y -y^{3}\,\v{e}_z$, evaluate explicitly the
   surface integral $\ds \oint_S\v{a}\cdot \dd\v{S}$, where $S$ is the surface of the unit
   cube bounded by $x=0,\; x=1,\; y=0,\; y=1,\; z=0,\; z=1.$
 
@@ -210,7 +210,7 @@
     \oint_C\,\v{a}\cdot \mbox{d}\v{r}
   \]
   where $C$ is the three-dimensional closed curve \emph{OABCDEO} defined by successive
-  vertices $(0,0,0)$, $(1,0,0)$, $(1,0,1)$, $(1,1,1)$, $(1,1,0)$, $(0,1,0)$, $(0,0,0$).
+  vertices $(0,0,0)$, $(1,0,0)$, $(1,0,1)$, $(1,1,1)$, $(1,1,0)$, $(0,1,0)$, $(0,0,0)$.
 
   \Question Check your answer using Stokes' theorem.
 
