--- a/fields.tex
+++ b/fields.tex
@@ -282,7 +282,9 @@ and~(#2#1#3)}
 \input{exercises/integration}
 \vfill\pagebreak
 \input{problems/integration}
-% \chapter{Calculus in curvilinear coordinates}
-% \label{chap:curvilinear}
-% \input{chapters/curvilinear}
+\chapter{General curvilinear coordinates}
+\label{chap:curvilinear}
+\input{chapters/curvilinear}
+\vfill\pagebreak
+\input{exercises/curvilinear}
 \end{document}
