--- a/fields.tex
+++ b/fields.tex
@@ -250,6 +250,7 @@ and~(#2#1#3)}
     v0.2.1 & 18/01/2026 & typos corrected in Chapter 1 exercises                        \\
     v0.3   & 23/01/2026 & week 2 update, Chapter 3 available                            \\
     v0.4   & 30/01/2026 & week 3 update, Chapter 3 fixes and more exercises \& problems \\
+    v0.5   & 06/02/2026 & week 4 update, Chapter 4 addition                             \\
     \bottomrule
   \end{tabular}
 }
